@startuml StockMarketClassDiagram
skinparam Monochrome true
skinparam Shadowing false
skinparam ClassFontSize 22
skinparam ClassAttributeFontSize 18
skinparam NoteFontSize 18

title Stock Market Class Diagram 

class TraderClient {
  + command_sig_t command_signal 
  + query_sig_t queries_signal
}

class TransactionManager {
  - vector<commands_var_t> all_transactions_
  + do_transaction(commands_var_t command): void
  + undo_latest_transaction()
} 

class PriceProvider {
  - map<id, price> price_map_ 
  + get_price(id) : shared_ptr<Price>
}

class BuyStockCommand {
  - shared_ptr<TraderAccount> buyer_account_ 
  - string stock_id_; 
  + execute() : bool
  + undo() : bool
}

class StockBroker {
  - Stock[] stocks_for_sale
  - map<string, boost::connection> connections_
  - shared_ptr<Mediator<void, Stock&> mediator_
  + get_stocks(): GetAllStockQuery
  + get_stock_price(): GetPriceQuery 
  + get_stock(): GetStockQuery  
}

class StockMediator {
  - boost::signal<...> provider_signal_ 
  + subscribe(topic, callback, callbackObject) : boost::connection
  + unSubscribe(topic, connection) : void 
}

class CommandBuilder {
  - shared_ptr<TraderAccount> trader_account_ 
  - boost::signal<query_var_t> queries_signal 
  + create_command(choice): shared_ptr<commands_var_t> 
}

class TraderAccount {
  - int balance_ 
  - vector<Stock> owned_stocks_ 
  - shared_ptr<Mediator<void, Stock&>> mediator_ 
  + boy_stock(stock_id) : bool 
  + sell_stock(stock_id) : bool 
}

class TraderPolicy {
  + calculateCommission(boughtAmount, Price): T 
}

class StockPriceSimulator {
  + update_prices(price_provider) : void 
}

TraderClient --* CommandBuilder
CommandBuilder --> TraderAccount
TraderAccount --> StockMediator 
TraderAccount --* TraderPolicy
StockBroker --> StockMediator
BuyStockCommand --> TraderAccount
StockBroker --> PriceProvider
TransactionManager --> BuyStockCommand
StockPriceSimulator --> PriceProvider
@enduml